fix(manifest): hot keys do not work on windows os
close #15

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -34,7 +34,8 @@
   "commands": {
     "format-document": {
       "suggested_key": {
-        "default": "Alt+F"
+        "default": "Alt+Shift+F",
+        "mac": "Alt+F"
       },
       "description": "Format Document"
     }
