feat: support `ace` and `codemirror` editors
closes #26 and closes #27

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -31,6 +31,7 @@
       ]
     }
   ],
+  "web_accessible_resources": ["scripts/*"],
   "commands": {
     "format-document": {
       "suggested_key": {
