build: bump prettier from 1.13.0 to 1.13.5 (close #46)
Bumps [prettier](https://github.com/prettier/prettier) from 1.13.0 to 1.13.5.
- [Release notes](https://github.com/prettier/prettier/releases)
- [Changelog](https://github.com/prettier/prettier/blob/master/CHANGELOG.md)
- [Commits](https://github.com/prettier/prettier/compare/1.13.0...1.13.5)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "watch": "npm run watch:vue & npm run watch:bili",
     "watch:vue": "vue-cli-service build --watch",
     "watch:bili": "bili --watch",
-    "contributors": "all-contributors"
+    "contributors": "all-contributors",
+    "upgrade:prettier": "cp -R node_modules/prettier/ public/lib/prettier/"
   },
   "dependencies": {
     "element-ui": "^2.4.1",
