--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "element-ui": "^2.4.9",
-    "prettier": "^1.15.0",
+    "prettier": "^1.15.1",
     "vue": "^2.5.17",
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^7.2.0",
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.75",
+    "@types/node": "^10.12.2",
     "@types/prettier": "^1.13.2",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.4",
@@ -37,7 +38,7 @@
     "babel-plugin-component": "git://github.com/u3u/babel-plugin-component.git",
     "babel-plugin-emotion": "^9.2.11",
     "babel-plugin-jsx-v-model": "^2.0.3",
-    "bili": "^3.3.0",
+    "bili": "3.2.0",
     "emotion": "^9.2.12",
     "lint-staged": "^8.0.4",
     "prettier-eslint-check": "^1.0.1",
