build: bump dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
   "files.exclude": {
     "**/.rpt2_cache": true
   },
-  "prettier.eslintIntegration": true
+  "prettier.eslintIntegration": true,
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
