--- a/package.json
+++ b/package.json
@@ -15,39 +15,41 @@
     "upgrade:prettier": "cp -R node_modules/prettier/ public/lib/prettier/"
   },
   "dependencies": {
-    "element-ui": "^2.4.9",
-    "prettier": "^1.15.2",
-    "vue": "^2.5.17",
-    "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^7.2.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
+    "element-ui": "^2.5.4",
+    "prettier": "^1.16.4",
+    "vue": "^2.6.6",
+    "vue-class-component": "^7.0.1",
+    "vue-property-decorator": "^7.3.0",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0",
     "vuex-class": "^0.3.1"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.75",
-    "@types/node": "^10.12.8",
-    "@types/prettier": "^1.13.2",
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.5",
-    "@vue/cli-plugin-typescript": "^3.1.1",
-    "@vue/cli-service": "^3.1.4",
+    "@types/chrome": "^0.0.81",
+    "@types/node": "^11.9.4",
+    "@types/prettier": "^1.16.1",
+    "@vue/cli-plugin-babel": "^3.4.1",
+    "@vue/cli-plugin-eslint": "^3.4.1",
+    "@vue/cli-plugin-typescript": "^3.4.1",
+    "@vue/cli-service": "^3.4.1",
     "@vue/eslint-config-airbnb": "^4.0.0",
-    "@vue/eslint-config-typescript": "^3.1.1",
-    "all-contributors-cli": "^5.4.1",
+    "@vue/eslint-config-typescript": "^4.0.0",
+    "all-contributors-cli": "^6.1.1",
     "babel-plugin-component": "git://github.com/u3u/babel-plugin-component.git",
-    "babel-plugin-emotion": "^9.2.11",
+    "babel-plugin-emotion": "^10.0.7",
     "babel-plugin-jsx-v-model": "^2.0.3",
-    "bili": "3.4.0",
-    "emotion": "^9.2.12",
-    "lint-staged": "^8.0.4",
-    "prettier-eslint-check": "^1.0.1",
+    "bili": "4.2.5",
+    "emotion": "^10.0.7",
+    "eslint": "^5.14.1",
+    "eslint-plugin-vue": "^5.2.2",
+    "lint-staged": "^8.1.4",
+    "prettier-eslint-check": "^1.0.2",
     "prettier-eslint-cli": "^4.7.1",
-    "rollup-plugin-typescript2": "^0.18.0",
-    "typescript": "^3.1.6",
+    "rollup-plugin-typescript2": "^0.19.2",
+    "typescript": "~3.2.2",
     "vue-emotion": "^0.4.2",
-    "vue-template-compiler": "^2.5.17",
-    "vue-tsx-support": "^2.2.1"
+    "vue-template-compiler": "^2.6.6",
+    "vue-tsx-support": "^2.2.2"
   },
   "browserslist": [
     "> 1%",
