--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,13 @@
       "components/*": ["src/components/*"],
       "utils/*": ["src/utils/*"],
       "views/*": ["src/views/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "typescript-styled-plugin",
+        "tags": ["styled", "css", "injectGlobal"]
+      }
+    ]
   },
   "include": [
     "src/**/*.ts",
