fix: babel plugin

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "element-ui": "^2.5.4",
     "prettier": "^1.16.4",
-    "vue": "^2.6.6",
+    "vue": "^2.6.7",
     "vue-class-component": "^7.0.1",
     "vue-property-decorator": "^7.3.0",
     "vue-router": "^3.0.2",
@@ -34,8 +34,8 @@
     "@vue/cli-service": "^3.4.1",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
-    "all-contributors-cli": "^6.1.1",
-    "babel-plugin-component": "git://github.com/u3u/babel-plugin-component.git",
+    "all-contributors-cli": "^6.1.2",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-emotion": "^10.0.7",
     "babel-plugin-jsx-v-model": "^2.0.3",
     "bili": "4.2.5",
@@ -43,12 +43,13 @@
     "eslint": "^5.14.1",
     "eslint-plugin-vue": "^5.2.2",
     "lint-staged": "^8.1.4",
-    "prettier-eslint-check": "^1.0.2",
+    "prettier-eslint-check": "^1.0.3",
     "prettier-eslint-cli": "^4.7.1",
     "rollup-plugin-typescript2": "^0.19.2",
     "typescript": "~3.2.2",
+    "typescript-styled-plugin": "^0.13.0",
     "vue-emotion": "^0.4.2",
-    "vue-template-compiler": "^2.6.6",
+    "vue-template-compiler": "^2.6.7",
     "vue-tsx-support": "^2.2.2"
   },
   "browserslist": [
