revert: use babel plugin

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "all-contributors-cli": "^6.1.2",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-jsx-v-model": "^2.0.3",
     "bili": "4.2.5",
     "emotion": "^10.0.7",
@@ -44,7 +45,6 @@
     "prettier-eslint-check": "^1.0.3",
     "prettier-eslint-cli": "^4.7.1",
     "rollup-plugin-typescript2": "^0.19.2",
-    "ts-import-plugin": "^1.5.5",
     "typescript": "~3.2.2",
     "typescript-styled-plugin": "^0.13.0",
     "vue-emotion": "^0.4.2",
