--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.81",
-    "@types/node": "^11.9.4",
+    "@types/node": "^11.9.5",
     "@types/prettier": "^1.16.1",
     "@vue/cli-plugin-babel": "^3.4.1",
     "@vue/cli-plugin-eslint": "^3.4.1",
@@ -35,18 +35,19 @@
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "all-contributors-cli": "^6.1.2",
+    "babel-plugin-emotion": "^9.2.11",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-jsx-v-model": "^2.0.3",
-    "bili": "4.2.5",
+    "bili": "4.4.0",
     "emotion": "^10.0.7",
     "eslint": "^5.14.1",
     "eslint-plugin-vue": "^5.2.2",
     "lint-staged": "^8.1.4",
     "prettier-eslint-check": "^1.0.3",
     "prettier-eslint-cli": "^4.7.1",
-    "rollup-plugin-typescript2": "^0.19.2",
+    "rollup-plugin-typescript2": "^0.19.3",
     "typescript": "~3.2.2",
-    "typescript-styled-plugin": "^0.13.0",
+    "typescript-styled-plugin": "^0.14.0",
     "vue-emotion": "^0.4.2",
     "vue-template-compiler": "^2.6.7",
     "vue-tsx-support": "^2.2.2"
